--- a/csr.html
+++ b/csr.html
@@ -203,8 +203,8 @@
                                     <div class="footer-link">
                                         <ul>
                                             <li><a href="about.html">About Company</a></li>
-                                            <li><a href="our-history.html">Who We Are</a></li>
-                                            <li><a href="about.html">Client Portal</a></li>
+                                            <li><a href="about.html">Who We Are</a></li>
+                                            <li><a href="clientportal.html">Client Portal</a></li>
                                         </ul>
                                     </div>
                                 <div></div></div>
@@ -214,9 +214,9 @@
                                     <h3 class="footer-title">Quick Links</h3>
                                     <div class="footer-link">
                                         <ul>
-                                            <li><a href="services-01.html">Corporate Responsibilities</a></li>
-                                            <li><a href="contact.html">News & Media</a></li>
-                                            <li><a href="contact.html">Gallery</a></li>
+                                            <li><a href="csr.html">Corporate Responsibilities</a></li>
+                                            <li><a href="newsmedia.html">News & Media</a></li>
+                                            <li><a href="gallery.html">Gallery</a></li>
                                         </ul>
                                      </div>
                                  </div>
