--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
                                         <h1>Fraven</h1>
                                         <h2 data-animation="fadeInLeft" data-delay=".3s">Get Started Fraven Technologies INC</h2>
                                         <div class="slider-button">
-                                            <a class="btn" href="#" data-animation="fadeInUp" data-delay=".5s">get started <i class="far fa-paper-plane"></i></a>
-                                            <a class="btn white-btn" href="#" data-animation="fadeInUp" data-delay=".7s">our services <i class="far fa-paper-plane"></i></a>
+                                            <a class="btn" href="contact.html" data-animation="fadeInUp" data-delay=".5s">get started <i class="far fa-paper-plane"></i></a>
+                                            <a class="btn white-btn" href="about.html" data-animation="fadeInUp" data-delay=".7s">About Us <i class="far fa-paper-plane"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -157,8 +157,8 @@
                                         <h1>Logio</h1>
                                         <h2 data-animation="fadeInLeft" data-delay=".3s">Get Started Fraven Technologies INC</h2>
                                         <div class="slider-button">
-                                            <a class="btn" href="#" data-animation="fadeInUp" data-delay=".5s">get started <i class="far fa-paper-plane"></i></a>
-                                            <a class="btn white-btn" href="#" data-animation="fadeInUp" data-delay=".7s">our services <i class="far fa-paper-plane"></i></a>
+                                            <a class="btn" href="contact.html" data-animation="fadeInUp" data-delay=".5s">get started <i class="far fa-paper-plane"></i></a>
+                                            <a class="btn white-btn" href="about.html" data-animation="fadeInUp" data-delay=".7s">About Us<i class="far fa-paper-plane"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -173,8 +173,8 @@
                                         <h1>Logio</h1>
                                         <h2 data-animation="fadeInLeft" data-delay=".3s">Get Started Fraven Technologies INC</h2>
                                         <div class="slider-button">
-                                            <a class="btn" href="#" data-animation="fadeInUp" data-delay=".5s">get started <i class="far fa-paper-plane"></i></a>
-                                            <a class="btn white-btn" href="#" data-animation="fadeInUp" data-delay=".7s">our services <i class="far fa-paper-plane"></i></a>
+                                            <a class="btn" href="contact.html" data-animation="fadeInUp" data-delay=".5s">get started <i class="far fa-paper-plane"></i></a>
+                                            <a class="btn white-btn" href="about.html" data-animation="fadeInUp" data-delay=".7s">About Us <i class="far fa-paper-plane"></i></a>
                                         </div>
                                     </div>
                                 </div>
@@ -239,8 +239,8 @@
                                     <div class="footer-link">
                                         <ul>
                                             <li><a href="about.html">About Company</a></li>
-                                            <li><a href="our-history.html">Who We Are</a></li>
-                                            <li><a href="about.html">Client Portal</a></li>
+                                            <li><a href="about.html">Who We Are</a></li>
+                                            <li><a href="clientportal.html">Client Portal</a></li>
                                         </ul>
                                     </div>
                                 <div></div></div>
@@ -250,9 +250,9 @@
                                     <h3 class="footer-title">Quick Links</h3>
                                     <div class="footer-link">
                                         <ul>
-                                            <li><a href="services-01.html">Corporate Responsibilities</a></li>
-                                            <li><a href="contact.html">News & Media</a></li>
-                                            <li><a href="contact.html">Gallery</a></li>
+                                            <li><a href="csr.html">Corporate Responsibilities</a></li>
+                                            <li><a href="newsmedia.html">News & Media</a></li>
+                                            <li><a href="gallery.html">Gallery</a></li>
                                         </ul>
                                      </div>
                                  </div>
