--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                             <div class="row">
                                 <div class="col-xl-10 col-lg-10 ">
                                     <div class="slider-content pos-rel">
-                                        <h1>Logio</h1>
+                                        <h1>Fraven</h1>
                                         <h2 data-animation="fadeInLeft" data-delay=".3s">Get Started Fraven Technologies INC</h2>
                                         <div class="slider-button">
                                             <a class="btn" href="contact.html" data-animation="fadeInUp" data-delay=".5s">get started <i class="far fa-paper-plane"></i></a>
@@ -170,7 +170,7 @@
                             <div class="row">
                                 <div class="col-xl-10 col-lg-10 ">
                                     <div class="slider-content pos-rel">
-                                        <h1>Logio</h1>
+                                        <h1>Fraven</h1>
                                         <h2 data-animation="fadeInLeft" data-delay=".3s">Get Started Fraven Technologies INC</h2>
                                         <div class="slider-button">
                                             <a class="btn" href="contact.html" data-animation="fadeInUp" data-delay=".5s">get started <i class="far fa-paper-plane"></i></a>
