--- a/contact.html
+++ b/contact.html
@@ -188,7 +188,7 @@
                                     </div>
                                     <div class="contact-us-text f-right">
                                         <span>Email Address</span>
-                                        <h4>support@gmail.com</h4>
+                                        <h4>support@fraventechnologies.com</h4>
                                     </div>
                                 </div>
                                 <div class="contact-us-list">
@@ -302,7 +302,7 @@
                                                 <i class="far fa-envelope-open"></i>
                                             </div>
                                             <div class="contact-address-text">
-                                                <span>support@gmail.com</span>
+                                                <span>support@fraventechnologies.com</span>
                                             </div>
                                         </li>
                                         <li>
