--- a/gallery.html
+++ b/gallery.html
@@ -305,7 +305,7 @@
                                                 <i class="far fa-envelope-open"></i>
                                             </div>
                                             <div class="contact-address-text">
-                                                <span>support@gmail.com</span>
+                                                <span>support@fraventechnologies.com</span>
                                             </div>
                                         </li>
                                         <li>
