--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                                                 <i class="far fa-envelope-open"></i>
                                             </div>
                                             <div class="contact-address-text">
-                                                <span>support@gmail.com</span>
+                                                <span>support@fraventechnologies.com</span>
                                             </div>
                                         </li>
                                         <li>
