--- a/clientportal.html
+++ b/clientportal.html
@@ -76,18 +76,16 @@
         <div class="side-info mb-30">
             <div class="contact-list mb-30">
                 <h4>Office Address</h4>
-                <p>123/A, Miranda City Likaoli
-                    Prikano, Dope</p>
+                <p>Ontario Canada</p>
             </div>
             <div class="contact-list mb-30">
                 <h4>Phone Number</h4>
-                <p>+0989 7876 9865 9</p>
-                <p>+(090) 8765 86543 85</p>
+                <p>+249 535 4070</p>
+                
             </div>
             <div class="contact-list mb-30">
                 <h4>Email Address</h4>
-                <p>info@example.com</p>
-                <p>example.mail@hum.com</p>
+                <p>support@fraventechnologies.com</p>
             </div>
         </div>
         <div class="instagram">
@@ -212,7 +210,7 @@
                                                 <i class="far fa-phone"></i>
                                             </div>
                                             <div class="contact-address-text">
-                                                <span>+012 (345) 556 99</span>
+                                                <span>+249 535 4070</span>
                                             </div>
                                         </li>
                                         <li>
@@ -220,7 +218,7 @@
                                                 <i class="far fa-envelope-open"></i>
                                             </div>
                                             <div class="contact-address-text">
-                                                <span>support@fraventechnologies.com</span>
+                                                <span>support<br>@fraventechnologies.com</span>
                                             </div>
                                         </li>
                                         <li>
@@ -228,7 +226,7 @@
                                                 <i class="far fa-map-marker-alt"></i>
                                             </div>
                                             <div class="contact-address-text">
-                                                <span>North Avenue, <br> Chicago, IL, 55030</span>
+                                                <span>Ontario Canada</span>
                                             </div>
                                         </li>
                                         
