--- a/contact.html
+++ b/contact.html
@@ -76,18 +76,16 @@
         <div class="side-info mb-30">
             <div class="contact-list mb-30">
                 <h4>Office Address</h4>
-                <p>123/A, Miranda City Likaoli
-                    Prikano, Dope</p>
+                <p>Ontario Canada</p>
             </div>
             <div class="contact-list mb-30">
                 <h4>Phone Number</h4>
-                <p>+0989 7876 9865 9</p>
-                <p>+(090) 8765 86543 85</p>
+                <p>+249 535 4070</p>
+                
             </div>
             <div class="contact-list mb-30">
                 <h4>Email Address</h4>
-                <p>info@example.com</p>
-                <p>example.mail@hum.com</p>
+                <p>support@fraventechnologies.com</p>
             </div>
         </div>
         <div class="instagram">
@@ -151,7 +149,7 @@
              <!-- map-area-start -->
              <div class="map-area">
                 <div class="map-wrapper">
-                    <div id="contact-map" class="contact-map"></div>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10662884.764945788!2d-84.74963605!3d49.2717859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce05b25f5113af%3A0x70f8425629621e09!2sOntario%2C%20Canada!5e0!3m2!1sen!2sng!4v1716651126456!5m2!1sen!2sng" width="1600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
             <!-- map-area-end -->
@@ -179,7 +177,7 @@
                                     </div>
                                     <div class="contact-us-text f-right">
                                         <span>Phone Number</span>
-                                        <h4>+012 (345) 556 99</h4>
+                                        <h4>+249 535 4070</h4>
                                     </div>
                                 </div>
                                 <div class="contact-us-list">
@@ -188,7 +186,7 @@
                                     </div>
                                     <div class="contact-us-text f-right">
                                         <span>Email Address</span>
-                                        <h4>support@fraventechnologies.com</h4>
+                                        <h4>support<br>@fraventechnologies.com</h4>
                                     </div>
                                 </div>
                                 <div class="contact-us-list">
@@ -197,8 +195,7 @@
                                     </div>
                                     <div class="contact-us-text f-right">
                                         <span>Main Office</span>
-                                        <h4>North Avenue, Chicago <br>
-                                            ILiok, 55030, USA</h4>
+                                        <h4>Ontario Canada</h4>
                                     </div>
                                 </div>
                             </div>
@@ -294,7 +291,7 @@
                                                 <i class="far fa-phone"></i>
                                             </div>
                                             <div class="contact-address-text">
-                                                <span>+012 (345) 556 99</span>
+                                                <span>+249 535 4070</span>
                                             </div>
                                         </li>
                                         <li>
@@ -302,7 +299,7 @@
                                                 <i class="far fa-envelope-open"></i>
                                             </div>
                                             <div class="contact-address-text">
-                                                <span>support@fraventechnologies.com</span>
+                                                <span>support<br>@fraventechnologies.com</span>
                                             </div>
                                         </li>
                                         <li>
@@ -310,7 +307,7 @@
                                                 <i class="far fa-map-marker-alt"></i>
                                             </div>
                                             <div class="contact-address-text">
-                                                <span>North Avenue, <br> Chicago, IL, 55030</span>
+                                                <span>Ontario Canada</span>
                                             </div>
                                         </li>
                                         
