--- a/csr.html
+++ b/csr.html
@@ -48,8 +48,8 @@
                                         <li><a href="index.html">Home</a></li>
                                         <li><a href="about.html">About </a></li>
                                         <li class="active"><a href="csr.html">CSR</a></li>
-                                        <li><a href="newsmedia.html">News & Media</a></li>
-                                        <li><a href="gallery.html">Gallery</a></li>
+                                        <li><a href="#">News & Media</a></li>
+                                        <li><a href="#">Gallery</a></li>
                                         <li><a href="clientportal.html">Client Portal</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
@@ -213,8 +213,8 @@
                                     <div class="footer-link">
                                         <ul>
                                             <li><a href="csr.html">Corporate Responsibilities</a></li>
-                                            <li><a href="newsmedia.html">News & Media</a></li>
-                                            <li><a href="gallery.html">Gallery</a></li>
+                                            <li><a href="#">News & Media</a></li>
+                                            <li><a href="#">Gallery</a></li>
                                         </ul>
                                      </div>
                                  </div>
