--- a/newsmedia.html
+++ b/newsmedia.html
@@ -49,7 +49,7 @@
                                 <li><a href="about.html">About </a></li>
                                 <li><a href="csr.html">CSR</a></li>
                                 <li class="active"><a href="newsmedia.html">News & Media</a></li>
-                                <li><a href="gallery.html">Gallery</a></li>
+                                <li><a href="#">Gallery</a></li>
                                 <li><a href="clientportal.html">Client Portal</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
@@ -314,8 +314,8 @@
                                     <div class="footer-link">
                                         <ul>
                                             <li><a href="csr.html">Corporate Responsibilities</a></li>
-                                            <li><a href="newsmedia.html">News & Media</a></li>
-                                            <li><a href="gallery.html">Gallery</a></li>
+                                            <li><a href="#">News & Media</a></li>
+                                            <li><a href="#">Gallery</a></li>
                                         </ul>
                                      </div>
                                  </div>
