--- a/clientportal.html
+++ b/clientportal.html
@@ -184,7 +184,7 @@
                                         <ul>
                                             <li><a href="about.html">About Company</a></li>
                                             <li><a href="about.html">Who We Are</a></li>
-                                            <li><a href="clientportal.html">Client Portal</a></li>
+                                            <li><a href="#">Client Portal</a></li>
                                         </ul>
                                     </div>
                                 <div></div></div>
