--- a/csr.html
+++ b/csr.html
@@ -50,7 +50,7 @@
                                         <li class="active"><a href="csr.html">CSR</a></li>
                                         <li><a href="#">News & Media</a></li>
                                         <li><a href="#">Gallery</a></li>
-                                        <li><a href="clientportal.html">Client Portal</a></li>
+                                        <li><a href="#">Client Portal</a></li>
                                         <li><a href="contact.html">Contact</a></li>
                                     </ul>
                                 </nav>
@@ -202,7 +202,7 @@
                                         <ul>
                                             <li><a href="about.html">About Company</a></li>
                                             <li><a href="about.html">Who We Are</a></li>
-                                            <li><a href="clientportal.html">Client Portal</a></li>
+                                            <li><a href="#">Client Portal</a></li>
                                         </ul>
                                     </div>
                                 <div></div></div>
