--- a/newsmedia.html
+++ b/newsmedia.html
@@ -50,7 +50,7 @@
                                 <li><a href="csr.html">CSR</a></li>
                                 <li class="active"><a href="newsmedia.html">News & Media</a></li>
                                 <li><a href="#">Gallery</a></li>
-                                <li><a href="clientportal.html">Client Portal</a></li>
+                                <li><a href="#">Client Portal</a></li>
                                 <li><a href="contact.html">Contact</a></li>
                             </ul>
                         </nav>
@@ -303,7 +303,7 @@
                                         <ul>
                                             <li><a href="about.html">About Company</a></li>
                                             <li><a href="about.html">Who We Are</a></li>
-                                            <li><a href="clientportal.html">Client Portal</a></li>
+                                            <li><a href="#">Client Portal</a></li>
                                         </ul>
                                     </div>
                                 <div></div></div>
