--- a/contact.html
+++ b/contact.html
@@ -202,34 +202,39 @@
                         </div>
                         <div class="col-xl-8 col-lg-8">
                             <div class="contact-us-wrapper">
-                                <form id="contact-form" action="assets/mail.php" method="POST">
+                                <form id="contact-form" action="process.php" method="POST">
                                     <div class="row">
                                         <div class="col-lg-6">
                                             <div class="form-2-box user-2-icon mb-30">
-                                                <input type="text" name="name" placeholder="Your Name">
+                                                <label for="name">Your Name:</label>
+                                                <input type="text" id="name" name="name" placeholder="Your Name">
                                             </div>
                                         </div>
                                         <div class="col-lg-6">
                                             <div class="form-2-box email-2-icon mb-30">
-                                                <input type="text" name="email" placeholder="Email Address">
+                                                <label for="email">Email Address:</label>
+                                                <input type="text" id="email" name="email" placeholder="Email Address">
                                             </div>
                                         </div>
                                         <div class="col-lg-6">
                                             <div class="form-2-box phone-2-icon mb-30">
-                                                <input type="text" name="phone" placeholder="Phone Number">
+                                                <label for="phone">Phone Number:</label>
+                                                <input type="text" id="phone" name="phone" placeholder="Phone Number">
                                             </div>
                                         </div>
                                         <div class="col-lg-6">
                                             <div class="form-2-box subject-2-icon mb-30">
-                                                <input type="text" name="subject" placeholder="Your Subject">
+                                                <label for="subject">Your Subject:</label>
+                                                <input type="text" id="subject" name="subject" placeholder="Your Subject">
                                             </div>
                                         </div>
                                         <div class="col-lg-12">
                                             <div class="form-2-box message-2-icon mb-30">
-                                                <textarea name="message" id="message" cols="30" rows="10" placeholder="send message"></textarea>
+                                                <label for="message">Send Message:</label>
+                                                <textarea name="message" id="message" cols="30" rows="10" placeholder="Send message"></textarea>
                                             </div>
                                             <div class="contact-btn">
-                                                <button class="btn btn-icon" type="submit">send request <i class="far fa-paper-plane"></i></button>
+                                                <button class="btn btn-icon" type="submit">Send Request <i class="far fa-paper-plane"></i></button>
                                             </div>
                                         </div>
                                     </div>
