--- a/gallery.html
+++ b/gallery.html
@@ -80,7 +80,7 @@
             </div>
             <div class="contact-list mb-30">
                 <h4>Phone Number</h4>
-                <p>+249 535 4070</p>
+                <p>+1 249 535 4070</p>
                 
             </div>
             <div class="contact-list mb-30">
@@ -295,7 +295,7 @@
                                                 <i class="far fa-phone"></i>
                                             </div>
                                             <div class="contact-address-text">
-                                                <span>+249 535 4070</span>
+                                                <span>+1 249 535 4070</span>
                                             </div>
                                         </li>
                                         <li>
