--- a/contact.html
+++ b/contact.html
@@ -164,7 +164,7 @@
                                 <span class="border-left-1"></span>
                                 <span>Contact Us</span>
                                 <span class="border-right-1"></span>
-                                <h2>Don't Hesitated To Contact Us</h2>
+                                <h2>Don't Hesitate To Contact Us</h2>
                             </div>
                         </div> 
                     </div>
