--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
                 <div class="col-xl-4 col-lg-3">
                     <div class="header-left mr-40">
                         <div class="logo logo-mt f-left">
-                            <a href="index.html"><img src="assets/img/logo/logo.png" alt="" /></a>
+                            <a href="index.html"><img src="assets/img/logo/Logo Main.svg" alt="" /></a>
                         </div>
                         
                     </div>
@@ -70,7 +70,7 @@
         </div>
         <div class="logo-side mb-30">
             <a href="index.html">
-                <img src="assets/img/logo/white.png" alt="" />
+                <img src="assets/img/logo/Logo White.svg" alt="" />
             </a>
         </div>
         <div class="side-info mb-30">
@@ -259,7 +259,7 @@
                     <div class="row">
                         <div class="col-xl-3 col-lg-3 col-md-6">
                             <div class="footer-logo mb-30">
-                                <a href="index.html"><img src="assets/img/logo/white-logo.png" alt=""></a>
+                                <a href="index.html"><img src="assets/img/logo/Logo White.svg" alt=""></a>
                             </div>
                         </div>
                         
