--- a/csr.html
+++ b/csr.html
@@ -274,7 +274,10 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="copyright text-center">
-                                <p>Copyright <i class="far fa-copyright"></i> 2024 <a href="#">Fraven Technologies INC</a>. All Rights Reserved</p>
+                                <script>
+                                        var currentYear = new Date().getFullYear();
+                                        document.write("&copy; " + currentYear + " Fraven Technologies INC. Designed by <a href='https://trychuuse.com/'>Chuuse</a>");
+                                      </script>
                             </div>
                         </div>
                     </div>
