--- a/about.html
+++ b/about.html
@@ -311,7 +311,12 @@
                     <div class="row">
                         <div class="col-xl-12">
                             <div class="copyright text-center">
-                                <p>Copyright <i class="far fa-copyright"></i> 2024 <a href="#">Fraven Technologies INC</a>. All Rights Reserved</p>
+                                <div class="footer-bottom centred">
+                                      <script>
+                                        var currentYear = new Date().getFullYear();
+                                        document.write("&copy; " + currentYear + " Fraven Technologies INC. Designed by <a href='https://trychuuse.com/'>Chuuse</a>");
+                                      </script>
+                                  </div>
                             </div>
                         </div>
                     </div>
